        * Assistants :
            - The UserMessages produce now notifications (so users can chose to be notified in their browser, emails are not the only way anymore).
        * Billing :
            - You can now define the default statuses (which are notably used as initial values in creation forms).
              You can also define the Invoice status to use when a number ins generated.
        * Emails :
            - The spam score of sent emails should be better :
                - the header contains a "Message-ID" which matches the host domain.
                - the "content-ID" of inline images matches the host domain.
            - The render of inlined images has been improved.
        * Geolocation :
            - The bricks which use OpenStreetMap are now used in the default installation (instead of the GoogleMaps ones).

  Developers side :
  -----------------
    - Javascript :
        - The version of Leaflet has been upgraded to "1.9.4".
        - The version of 'FullCalendar' is now "5.11.4".
        - Some math functions have been added as underscorejs mixins: absRound, clamp, scaleRound, scaleTrunc, toRadian, toDegree & toNumber
        - The version of D3js has been upgraded to "7.8.5".
        - The version of jQuery is now "3.7.1" (jQuery-migrate 3.4.1).

    Non breaking changes :
    ----------------------
        # Deprecations :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH are now deprecated.
                - In the class 'mass_import.FormRegistry' :
                    - The methods 'get()' & 'is_registered()' are now deprecated.
                    - The class 'UnregisteredCTypeException' is now deprecated.
            - In the methods 'creme_core.models.HeaderFilter.can_view()' & 'creme_core.models.EntityFilter.can_view()',
              the argument "content_type" is deprecated.